# bookstore-CICD

./: .env-example  .gitignore  Dockerfile  Dockerfile-2  Dockerfile-test  Makefile  README.md  db.sqlite3  docker-compose-test.yml  docker-compose-teste.yml  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: build.yml  gcp.yml  pythonanywhere-deploy.yml  workflow-pr.yaml
bookstore/: settings.py  urls.py  views.py  wsgi.py
bookstore/templates/: hello_world.html
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: test_order_serializer.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: __init__.py  category_viewset.py  product_viewset.py
